@@ -309,6 +309,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * (bug 10211) Added db server replication lag information in meta=siteinfo
 * Added external url search within wiki pages (list=exturlusage)
 * Added link enumeration (list=alllinks)
+* Added registered users enumeration (list=allusers)
 
 == Maintenance script changes since 1.10 ==
 
